--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.391.2.9 2011/11/11 05:45:38 ewang Exp $
+* $Id: lang_strings.xml,v 1.391.2.10 2011/11/22 08:07:50 ewang Exp $
 *
 */
 
@@ -2852,5 +2852,47 @@ If you click &quot;OK&quot;, this context - and the attribute and metadata value
 
 	<!-- Trigger - Remove future lineage cron -->
 	<string source="trigger_remove_future_lineage_cron">Delete all the asset's future lineage cron jobs of type </string>
+
+	<!-- Squid Cacching -->
+	<string source="squid_cache_section">Squid Cache</string>
+
+	<string source="squid_hipo_name_clear_squid_cache">Clear Squid Cache</string>
+	<string source="squid_hipo_clearing_squid_cache">Clearing Squid Cache</string>
+	<string source="squid_clearing_squid_cache">Clearing %s</string>
+
+	<string source="squid_cron_name">Purge Squid Cache Cron Job #%s</string>
+	<string source="squid_cron_done_msg">Squid Cache cleared for all URLs applied to "%1$s" (Id: #%2$s).</string>
+
+	<string source="squid_tool_pref_note">Enter the Host Names separated by newlines, to be used in the command "squidclient -h hostname -m PURGE $url".</string>
+	<string source="squid_tool_asset_note">Squid cache will be cleared for all URLs applied to this asset.</string>
+	<string source="squid_tool_hostname">Host Names</string>
+	<string source="squid_tool_hostname_note">You may modify the settings in the External Tools Configuration.</string>
+	<string source="squid_tool_path_field">Path</string>
+	<string source="squid_tool_port_field">Port Number</string>
+	<string source="squid_tool_option_field">Options</string>
+	<string source="squid_tool_option_note">Additonal options to be included in the purge command.</string>
+	<string source="squid_tool_slash_field">Trailing Slash</string>
+	<string source="squid_tool_slash_note">PURGE command should also clear selected URLs with appended trailing slash.</string>
+
+	<string source="squid_tool_schedule_section">Schedule Clear Cache</string>
+	<string source="squid_tool_scheduled_job_field">Scheduled Jobs</string>
+	<string source="squid_tool_one_off_field">Schedule a One Off Job</string>
+	<string source="squid_tool_repeating_field">Schedule a Repeating Job</string>
+	<string source="squid_tool_clear_now_field">Clear Now</string>
+	<string source="squid_tool_populate_question">Repopulate ?</string>
+	<string source="squid_tool_populate_note">Request each URL after the purge action so that Squid can recache it.</string>
+	<string source="squid_tool_cascade_note">Clear the cache of the selected asset and its children.</string>
+	<string source="squid_tool_note">Note: Repopulate and Cascade option will also be applied to the cron job if you schedule one.</string>
+	
+	<string source="squid_tool_url_port_field">Add Port to URL</string>
+	<string source="squid_tool_url_port_note">You can specify a port to add to each URL when submitted to Squid. If you are running Squiz Matrix on a non-standard port behind Squid, you may need to add the port back to the URL to clear the cache.</string>
+
+	<string source="squid_clear_this">Clear this cache %s </string>
+	<string source="squid_clear_at">at</string>
+	<string source="squid_clear_every">every</string>
+	<string source="squid_tool_not_configured">Squid Cache is not configured</string>
+	<string source="squid_tool_no_hostnames">Please make sure there is at least one hostname in the Squid Cache section of External Tools Configuration.</string>
+	<string source="squid_tool_path_empty">Please make sure you set the path to squidclient in the Squid Cache section of External Tools Configuration.</string>
+	<string source="squid_tool_path_invalid">The squidclient path is invalid. Please check it in the Squid Cache section of External Tools Configuration.</string>
 
 </strings>
