Security fix backport -- Sendmail path is no longer editable in bulkmail post office. You have to use external tool config file to change it.

--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.398.2.6 2011/11/22 07:23:48 ewang Exp $
+* $Id: lang_strings.xml,v 1.398.2.7 2011/11/28 06:28:15 ewang Exp $
 *
 */
 
@@ -27,7 +27,6 @@
 	<string source="0_is_unlimited_attempts">Zero (0) is unlimited attempts</string>
 	<string source="actions">Actions</string>
 	<string source="active_locks">Active Locks</string>
-	<string source="system_config_active_locks_no_support">Retrieving Active Locks information is not suppported by "%s" locking method.</string>
 	<string source="add_language">Add Language ?</string>
 	<string source="add_new_future_status">Add New Future Status</string>
 	<string source="add_new_future_permission">Add New Future Permission</string>
@@ -467,7 +466,6 @@
 	<string source="cron_job_expired_workflow">Expired Workflow Cron Job</string>
 	<string source="cron_job_expired_matrix_cache">Expired Matrix Cache Cron Job</string>
 	<string source="cron_job_expired_matrix_locks">Expired Matrix Locks Cron Job</string>
-	<string source="cron_job_remove_soap_response_files">Remove SOAP Response Files Cron Job</string>
 	<string source="cron_new_future_linking">New Future Linking</string>
 	<string source="cron_job_asset-less_future_linking">Asset-less Future Linking Cron Job</string>
 	<string source="cron_job_asset_less_future_status">Asset-less Future Status Cron Job</string>
@@ -534,13 +532,6 @@
 	<string source="update_permission_to_current_children">Update this permission to all existing children that fall under this asset in the various hierarchies</string>
 	<string source="option_value">Option Value</string>
 	<string source="no_select_box_options">There are currently no select box options</string>
-	<string source="response_keyword_note">Note: This list only shows the keywords for the first set of data for the array elements in the soap response, if any</string>
-	<string source="field_keyword_tags">Field Keyword (Tag)</string>
-	<string source="fail_validation_error_msg">If the specified field fails the validation, the step action will treat it as an regular form error.</string>
-	<string source="question_keyword_example">Question keywords can be used in the message, for example, <![CDATA[&#37;response_100_q1&#37;, &#37;question_name_100_q1&#37;, &#37;file_upload_100_q2&#37;]]></string>
-	<string source="response_to_download_as_file">Response to download as file</string>
-	<string source="response_to_download_as_file_note">If a file is expected in the SOAP Response, you can configure the keywords above. This will ensure the file is temporary downloaded on the server and a relative link is provided to view that file in the replacement for above keyword.</string>
-	<string source="add_new_field">New field to check ?</string>
 
 	<string source="system_configuration">System Configuration</string>
 	<string source="squiz_server_configuration">Squiz Server Configuration</string>
@@ -647,7 +638,7 @@
 	<string source="cannot_cascade_while_workflow_running">You cannot cascade workflow schemas while workflow is running</string>
 	<string source="no_access_to_cascade_workflow">You do not have access to cascade workflow schemas for this asset</string>
 	<string source="action_affects_assets_below_this">These actions will affect %1$s other assets below "%2$s"</string>
-	<string source="cannot_access_asset">You do not have permission to access the asset</string> <!-- USE FOR LOGIN SCREENS? -->
+	<string source="cannot_access_asset">You do not have permission to access &lt;i&gt;%s&lt;/i&gt;</string> <!-- USE FOR LOGIN SCREENS? -->
 	<string source="cannot_access_inline_asset_screen">You do not have permission to access the &lt;i&gt;%1$s&lt;/i&gt; screen of &lt;i&gt;%2$s&lt;/i&gt;</string>
 	<string source="section_not_found">Function not found for painting section "%s"</string>
 	<string source="specific_painting_function_not_found">Function "%s" not found for painting</string>
@@ -933,7 +924,6 @@
 	<string source="content_type_no_change">-- Leave Unchanged --</string>
 	<string source="bodycopy_asset_has_no_design">&lt;b&gt;NOTE:&lt;/b&gt; This asset does not have a design applied to it for the URL currently being edited [&lt;b&gt;%s&lt;/b&gt;]. No style information is available to use for content editing.</string>
 	<string source="bodycopy_asset_has_no_preview">&lt;b&gt;NOTE:&lt;/b&gt; This asset does not have a preview URL or design applied to it in this context. No style information is available to use for content editing.</string>
-	<string source="asset_has_no_design">&lt;b&gt;NOTE:&lt;/b&gt; This asset does not have a design applied to it. You need a Design applied for Paint Layouts to work.</string>
 	<string source="bodycopy_safe_edit_cannot_insert_new">&lt;b&gt;NOTE:&lt;/b&gt; You cannot insert a new Div or Table whilst in Safe Edit mode</string>
 	<string source="bodycopy_pref_cannot_insert_new">&lt;b&gt;NOTE:&lt;/b&gt; You cannot insert a new Div or Table while it is disabled in user preference</string>
 	<string source="bodycopy_insert_table">Insert Table</string>
@@ -2905,5 +2895,11 @@ If you click &quot;OK&quot;, this context - and the attribute and metadata value
 	<string source="squid_tool_path_empty">Please make sure you set the path to squidclient in the Squid Cache section of External Tools Configuration.</string>
 	<string source="squid_tool_path_invalid">The squidclient path is invalid. Please check it in the Squid Cache section of External Tools Configuration.</string>
 
+	<!-- sendmail for bulkmail -->
+	<string source="sendmail">Sendmail</string>
+	<string source="sendmail_path">Path</string>
+	<string source="sendmail_path_note">The path to your sendmail binary. Eg. /usr/sbin/sendmail. Use config file data/private/conf/tools.inc.</string>
+	<string source="sendmail_arguments">Arguments</string>
+	<string source="sendmail_arguments_note">Eg. -t will run sendmail as 'sendmail -t'. Use config file data/private/conf/tools.inc.</string>
 
 </strings>
