--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.398.2.10 2012/01/04 00:06:44 csmith Exp $
+* $Id: lang_strings.xml,v 1.398.2.11 2012/04/30 05:03:48 ewang Exp $
 *
 */
 
@@ -638,7 +638,7 @@
 	<string source="cannot_cascade_while_workflow_running">You cannot cascade workflow schemas while workflow is running</string>
 	<string source="no_access_to_cascade_workflow">You do not have access to cascade workflow schemas for this asset</string>
 	<string source="action_affects_assets_below_this">These actions will affect %1$s other assets below "%2$s"</string>
-	<string source="cannot_access_asset">You do not have permission to access &lt;i&gt;%s&lt;/i&gt;</string> <!-- USE FOR LOGIN SCREENS? -->
+	<string source="cannot_access_asset">You do not have permission to access the asset</string> <!-- USE FOR LOGIN SCREENS? -->
 	<string source="cannot_access_inline_asset_screen">You do not have permission to access the &lt;i&gt;%1$s&lt;/i&gt; screen of &lt;i&gt;%2$s&lt;/i&gt;</string>
 	<string source="section_not_found">Function not found for painting section "%s"</string>
 	<string source="specific_painting_function_not_found">Function "%s" not found for painting</string>
